fix footer overflow

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -86,6 +86,8 @@ footer {
     width: 100%;
     bottom: 0px;
 
+    overflow: hidden;
+
     z-index: -1;
 
     padding-top: 2rem;
